tweaks article css for avoid overflow

--- a/app/assets/stylesheets/frontend/app.scss
+++ b/app/assets/stylesheets/frontend/app.scss
@@ -316,6 +316,7 @@ main {
 	border-radius: 9px;
 	padding: 1.4rem;
 	height: 100%;
+  overflow: auto;
 }
 
 a {
